--- a/examples/four-bar/index.html
+++ b/examples/four-bar/index.html
@@ -10,13 +10,11 @@
   </head>
   <body>
     <form>
-      <label>Load [kg]:<br /><input type="number" data-load value="10" min="0" max="50" /></label>
-      <label>Speed [rad/s]:<br /><input type="number" data-speed value="1" min="-1" max="1" step="0.1" /></label>
-      <label>Duration [s]:<br /><input type="number" data-duration value="20" disabled /></label>
-      <label>Steps:<br /><input type="number" data-steps value="50000" disabled /></label>
+      <label>Load [kg]:<br /><input type="number" data-load value="20" min="1" max="100" /></label>
+      <label>Speed [rad/s]:<br /><input type="number" data-speed value="1" min="-5" max="5" step="0.1" /></label>
       <button>Simulate</button>
     </form>
-    <div id="canvas-wrapper" class="loading">
+    <div id="canvas-wrapper">
       <div class="loader"></div>
       <canvas id="canvas" width="600" height="400"></canvas>
     </div>
